feat : upgrade to java 21