@@ -18,7 +18,7 @@ public class XirrCalculatorHelper {
     // ensures that balance will never be null
     public static Double getBalance(List<UserTransactionDetailsProjection> transactionDetailsProjectionList) {
         Double balance = transactionDetailsProjectionList
-                .get(transactionDetailsProjectionList.size() - 1)
+                .getLast()
                 .getBalance();
         if (balance == null) {
             if (transactionDetailsProjectionList.size() < 2) {
